fix contact section not showing on large devices

--- a/styles.css
+++ b/styles.css
@@ -74,12 +74,8 @@ body {
     background-color: black;
     color: white;
     text-align: center;
-    position: absolute;
     width: 100%;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    bottom: 0;
-   
+    height: 100px;
 }
 
 #intro {
@@ -185,12 +181,6 @@ body {
 #contact h2 {
     margin: 0px;
 }
-#fb {
-    float: inherit;
-    display: inline-block;
-    
-}
-
 
 #contact a {
     float: inherit;
@@ -198,10 +188,4 @@ body {
     font-size: 20px;
     color: red;
 }
-
-#email {
-    float: inherit;
-    display: inline-block;
-}
-
 
